operator/src/main/resources/com/github/eyefloaters/console/dependents/console.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placeholder
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: placeholder
  template:
    metadata:
      labels:
        app: placeholder
    spec:
      serviceAccountName: placeholder
      volumes:
      - emptyDir: {}
        name: cache
      containers:
      ### API
      - name: console-api
        image: quay.io/eyefloaters/console-api:0.0.33
        ports:
        - containerPort: 8080
        env: []
      ### User Interface
      - name: console-ui
        image: quay.io/eyefloaters/ui:0.0.33
        volumeMounts:
        - mountPath: /app/.next/cache
          name: cache
        ports:
        - containerPort: 3000
