operator/src/main/resources/com/github/eyefloaters/console/dependents/console.route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: console-ui-route
spec:
  to:
    kind: Service
    name: console-ui
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
